--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "fast-diy",
   "version": "0.0.1",
   "description": "A small tool to quickly format Discuz! diy module.",
-  "main": "bin/index",
   "bin": {
-    "fast-diy": "index.js"
+    "fast-diy": "bin/index.js"
   },
   "dependencies": {
     "cheerio": "~0.8.3",
